# parallax-mapping

./: CMakeLists.txt
include/: draw.hpp  image.hpp  shader.hpp
shaders/: draw.frag  draw.vert  parallax.frag  parallax.geom  parallax.vert
src/: draw.cpp  image.cpp  main.cpp
